--- a/index.html
+++ b/index.html
@@ -4,20 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Speel die gimma</title>
+    <title>Lekker Vechten</title>
 </head>
 <body>
-    <audio src="spring.mp3" class="audiojump"></audio>
-    <!-- https://www.youtube.com/watch?v=ZrP-30MmpvM&ab_channel=IltubodiFlegias -->
-    <audio src="dead.mp3" class="gameover"></audio>
-   <!-- https://www.youtube.com/watch?v=eZjKWI4dHuU&ab_channel=EpicSoundEffects -->
-    <div class="gimma">
-        <img src="running.gif" class="poppetje" alt="poppetje">
-        <!-- https://japassou.itch.io/ronin-pixel-art-character -->
-        <img src="obstakel.gif" class="barrel" alt="obstakel">
-         <!-- https://minecraft.wiki/w/Java_Edition_3D_Shareware_v1.34 -->
+    <div id="spel">
+        <div class="afbeelding-en-knop-container">
+            <img src="images/ryu-hadouken.png" alt="">
+            <!-- https://nl.pinterest.com/pin/545639311081219935/ -->
+            <button id="attackknop">Attack</button>
+        </div>
+        <div class="afbeelding-en-knop-container">
+            <img src="images/monster.jpeg" alt="monster">
+            <!-- https://nl.ign.com/gallery/128516/every-monster-in-monster-hunter-rise-announced-so-far -->
+            <button id="healknop">Heal</button>
+        </div>
+        <div class="health">
+            <img class="hp" src="images/hp.png" alt="">
+            <!-- https://www.iconfinder.com/icons/6333896/flask_health_point_hitpoint_hp_rpg_roleplay_dnd_icon -->
+            <img class="hp" src="images/hp.png" alt="">
+            <!-- https://www.iconfinder.com/icons/6333896/flask_health_point_hitpoint_hp_rpg_roleplay_dnd_icon -->
+            <img class="hp" src="images/hp.png" alt="">
+            <!-- https://www.iconfinder.com/icons/6333896/flask_health_point_hitpoint_hp_rpg_roleplay_dnd_icon -->
+            <img class="hp" src="images/hp.png" alt="">
+            <!-- https://www.iconfinder.com/icons/6333896/flask_health_point_hitpoint_hp_rpg_roleplay_dnd_icon -->
+            <img class="hp" src="images/hp.png" alt="">
+            <!-- https://www.iconfinder.com/icons/6333896/flask_health_point_hitpoint_hp_rpg_roleplay_dnd_icon -->
+        </div>
+        <p id="optie">Val aan om te starten.</p>
+        <!-- Audio element gemaakt met behulp van chatgpt, prompt was "hoe zorg ik ervoor dat er audio afspeeld als ik op een knop klik"-->
+        <audio id="attackSound" src="explosion.mp3"></audio>
+        <!-- https://www.youtube.com/watch?v=s2FD3o8bQVU&ab_channel=NgemisLikeBesokMati%F0%9F%97%BF -->
+        <audio id="healSound" src="heal.mp3"></audio>
+        <!-- https://www.youtube.com/watch?v=lSn5jIKxpE4&ab_channel=SonidosyefectosdeLoL -->
+        <script src="script.js"></script>
     </div>
-    <p id="text-start">Klik op een knop</p>
-    <script src="script.js"></script>
 </body>
 </html>
